--- a/Semana4/Reto/Reto1/S4Reto1.html
+++ b/Semana4/Reto/Reto1/S4Reto1.html
@@ -5,8 +5,16 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Reto 1</title>
+  <link rel="stylesheet" href="S4Reto1.css">
 </head>
 <body>
-  
+  <div class="cuadros">
+    <div class=cuadrado></div>
+    <div class=cuadrado></div>
+    <div class=cuadrado></div>
+    <div class=cuadrado></div>
+    <div class=cuadrado></div>
+    <div class=cuadrado></div>
+  </div>
 </body>
 </html>
