--- a/Semana4/Reto/Reto2/S4Reto2.html
+++ b/Semana4/Reto/Reto2/S4Reto2.html
@@ -5,8 +5,44 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <title>Outfitters Main Page</title>
+  <link rel="stylesheet" href="./S4Reto2.css">
 </head>
 <body>
-  
+  <header>
+    <nav>
+      <div class = "encabezado">
+        <img src="assets/logo1.jpg" alt="logo">
+        <label class="show-menu-btn" for="check">
+          <i class="fas fa-bars"></i>
+        </label>
+        <ul class="menu">
+          <li><img src="assets/carrito.JPG"></li>
+          <li><img src="assets/lupa.JPG"></li>
+          <li>
+            <label class="hide-menu-btn" for="check">
+              <img src="assets/trespuntos.JPG">
+              <i class="fas fa-times"></i>
+            </label>
+          </li>
+        </ul>
+      </div>
+    </nav>
+    <section class="bienvenido">
+      <h1>Welcome to Oufitters</h1>
+      <div class=b1>
+      <div>Wheter it's fishing, rafting our country's rivers, or the hiking adventure of a lifetime - we match with you the clothes and equipment to make your trip comfortable and memorable.</div>
+      <div>SHOP THE COLLECTION</div>
+      </div>
+    </section>
+  </header>
+  <main>
+    <section class=listas>
+      <div class="lista">
+        <div class=cuadro>
+          <img src="assets/img1.jpg">
+        </div>
+      </div>
+    </section>
+  </main>
 </body>
 </html>
