--- a/Week6/Dia2/02-eventos.html
+++ b/Week6/Dia2/02-eventos.html
@@ -10,6 +10,13 @@
 	<div id="contenido">
 
 	</div>
+	<hr><!--linea para division-->
+	<form id="formulario">
+		<input type="text" name="nombres" placeholder="Ej. Juan">
+		<input type="text" name="apellidos" placeholder="Ej. Perez">
+		<br>
+		<input type="submit" value="Enviar">
+	</form>
 
 	<script src="02-eventos.js"></script>
 </body>
