--- a/Week8/Dia1/index.html
+++ b/Week8/Dia1/index.html
@@ -7,6 +7,6 @@
   <title>Document</title>
 </head>
 <body>
-  <script scr="02-class.js"></script>
+  <script src="02-class.js"></script>
 </body>
 </html>
